Enable clean db button. Refs #106570